--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  @apply text-base; /* 16px */
+}
+
+.input-style {
+  @apply flex items-center px-4 py-3.5 rounded-md border border-solid border-[#818181] text-xs not-italic font-light leading-[120%];
+}
