--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,12 @@
 @import './reset.scss';
 
+body {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+}
+
 .user-panel-title {
   color: #000;
   font-family: Roboto;
