fix: update style after add new fonts

--- a/src/components/UI/PasswordInput/PasswordInput.module.scss
+++ b/src/components/UI/PasswordInput/PasswordInput.module.scss
@@ -10,16 +10,16 @@
 
   &::placeholder {
     color: #818181;
-    font-family: Montserrat;
     font-size: 12px;
-    font-weight: 300;
-    line-height: 120%;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
   }
 }
 
 .icon {
   cursor: pointer;
   position: absolute;
-  top: 34%;
-  right: 2%;
+  top: 28%;
+  right: 5%;
 }
