--- a/src/components/UI/ButtonUI/ButtonUI.module.scss
+++ b/src/components/UI/ButtonUI/ButtonUI.module.scss
@@ -3,6 +3,12 @@
   font-weight: 500;
   padding: 11px 15px;
   border-radius: 4px;
+
+  &:disabled {
+    border: none;
+    color: #FFF;
+    background: #818181;
+  }
 }
 
 .main {
