--- a/src/components/UI/TextInput/TextInput.module.scss
+++ b/src/components/UI/TextInput/TextInput.module.scss
@@ -6,11 +6,10 @@
 
   &::placeholder {
     color: #818181;
-    font-family: Montserrat;
     font-size: 12px;
     font-style: normal;
-    font-weight: 300;
-    line-height: 120%;
+    font-weight: 400;
+    line-height: 16px;
   }
 }
 
