--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -24,12 +24,12 @@ html,
 body {
   height: 100%;
   min-width: 320px;
-
 }
 
 input,
 button,
 textarea {
+  font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
