--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,3 +31,10 @@ h6 {
   line-height: normal;
   margin-bottom: 48px;
 }
+
+.user-panel-subtitle {
+  color: #000;
+  font-family: 'e-UkraineHead-Bold', sans-serif;
+  font-size: 21px;
+  font-style: normal;
+}
